--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,89 @@
     transform: rotate(360deg);
   }
 }
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+*{
+    box-sizing: border-box;
+}
+body{
+  background-color: #ecf0f1;
+    font-family: 'Muli','sans-serif';
+    display: flex;
+    flex-direction: column;
+    align-items:center ;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+    padding: 20px;
+}
+.container{
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1
+    ), 0 6px 6px rgba(0,0,0,0.1);
+    padding: 50px 20px;
+    text-align: center;
+    max-width: 100%;
+    width: 800px;
+
+}
+
+h3{
+    margin: 0;
+    opacity: 0.5;
+    letter-spacing: 2px;
+
+}
+
+.quote{
+    font-size: 30px;
+    letter-spacing: 1px;
+    line-height: 40px;
+    margin: 50px auto;
+    max-width: 600px;
+
+}
+
+.btn{
+    background-color: #9f68e0;
+    border: 0;
+    border-radius: 10px;
+    color: #fff;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1
+    ), 0 6px 6px rgba(0,0,0,0.1);
+    padding: 14px 40px;
+    cursor: pointer;
+}
+
+.btn:focus{
+outline: 0;
+}
+.btn:active{
+    transform: scale(0.98);
+}
+.container {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+}
+
+.container:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.loading{
+  background: linear-gradient(to right ,#f6f7f8 0%,
+  #edeef1 10%,
+  #f6f7f8 20%,
+  #f6f7f8 100%);
+  background-size: 200% 100%;
+  animation: load 1s linear infinte;
+}
+@keyframes load {
+  0%{
+      background-position: 50% 0;
+  }
+  100%{
+      background-position: -150% 0;
+  }
+}
