--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,10 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 *{
     box-sizing: border-box;
 }
-body{
+.App{
+  text-align: center;
   background-color: #ecf0f1;
     font-family: 'Muli','sans-serif';
     display: flex;
@@ -66,7 +30,7 @@ body{
 
 h3{
     margin: 0;
-    opacity: 0.5;
+    /* opacity: 0.5; */
     letter-spacing: 2px;
 
 }
@@ -89,6 +53,7 @@ h3{
     ), 0 6px 6px rgba(0,0,0,0.1);
     padding: 14px 40px;
     cursor: pointer;
+    margin: 10px;
 }
 
 .btn:focus{
@@ -106,19 +71,12 @@ outline: 0;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.loading{
-  background: linear-gradient(to right ,#f6f7f8 0%,
-  #edeef1 10%,
-  #f6f7f8 20%,
-  #f6f7f8 100%);
-  background-size: 200% 100%;
-  animation: load 1s linear infinte;
-}
-@keyframes load {
-  0%{
-      background-position: 50% 0;
-  }
-  100%{
-      background-position: -150% 0;
-  }
+.errorpanel{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #fff4f4;
+  color:red;
 }
