--- a/src/components/SidePanel.css
+++ b/src/components/SidePanel.css
@@ -4,12 +4,32 @@
   position: fixed;
   right: 0;
   top: 0;
-  background: #bfaced;
-  /* display: block; */
+  background: #b3b4bd;
 }
 
 .singleQuote {
-  padding: 3px 10px;
+  padding: 7px 15px;
   background: #f0f0f0;
   border-bottom: 1px solid darkgrey;
+  font-size: 18px;
 }
+
+@media (max-width: 1024px) {
+    .sidepanel {
+        width: 60vw;
+    }
+}
+
+@media (max-width: 600px) {
+    .sidepanel {
+        width: 70vw;
+    }
+}
+@media (max-width: 480px) {
+    .sidepanel {
+        width: 85vw;
+    }
+}
+
+
+
